<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/resetButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@android:drawable/ic_menu_delete" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/balon" />

            <ImageView
                android:id="@+id/resultButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@android:drawable/ic_menu_slideshow"/>

        </LinearLayout>

        <TextView
            android:id="@+id/local_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/visitor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/visitante"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/center_layout"
            android:layout_below="@+id/local_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lessLocButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menosuno"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCountLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="72sp"
                tools:text="62" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/moreLocButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masuno"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/more2LocButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masdos"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/visitor_text"
            android:layout_below="@+id/center_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lessVisButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menosuno"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCountVisitante"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="72sp"
                tools:text="52" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/moreVisButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masuno"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/more2VisButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masdos"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>